[package]
name = "textspan"
version = "0.4.0"
license = "MIT"
authors = ["Yohei Tamura <tamuhey@gmail.com>"]
edition = "2018"
description = "Text span utility"
homepage = "https://github.com/tamuhey/textspan"
repository = "https://github.com/tamuhey/textspan"
keywords = ["nlp", "text", "algorithm"]
readme = "README.md"
documentation = "https://docs.rs/textspan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokenizations = "^0.4" 

[dev-dependencies]
quickcheck = "0.9"           
quickcheck_macros = "0.9"  
proptest = "0.10" 
