[package]
name = "textspan"
version = "0.5.2"
license = "MIT"
authors = ["Yohei Tamura <tamuhey@gmail.com>"]
edition = "2018"
description = "Text span utility"
homepage = "https://github.com/tamuhey/textspan"
repository = "https://github.com/tamuhey/textspan"
keywords = ["nlp", "text", "algorithm"]
readme = "README.md"
documentation = "https://docs.rs/textspan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokenizations = "0.4.2" 

[dev-dependencies]
quickcheck = "1.0"           
quickcheck_macros = "1.0"  
proptest = "1.0" 
rstest = "0.7.0"
