[package]
name = "pytextspan"
version = "0.5.1"
authors = ["Yohei Tamura <tamuhey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
textspan = { path = ".." }

[lib]
name = "textspan"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "^0.13"
features = ["extension-module"]
