[package]
name = "pytextspan"
version = "0.5.7"
authors = ["Yohei Tamura <tamuhey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
textspanrs = { package = "textspan", version = "0.5.2"}

[lib]
name = "textspan"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.17.3"
features = ["extension-module"]
