[tool.poetry]
name = "textspan"
version = "0.1.0"
description = ""
authors = ["Yohei Tamura <tamuhey@gmail.com>"]
license = "MIT"

[tool.versionup]
tag = true
commit = true
files = [ "src/lib.rs", "Cargo.toml",]
tag_prefix = "python/"

[tool.poetry.dependencies]
python = ">=3.5"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
hypothesis = "^5.23.11"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
