[build-system]
requires = [ "poetry>=1.0",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pytextspan"
version = "0.5.1"
description = ""
authors = [ "Yohei Tamura <tamuhey@gmail.com>",]
license = "MIT"
[[tool.poetry.packages]]
include = "textspan"

[tool.versionup]
tag = true
commit = true
files = [ "src/lib.rs", "Cargo.toml",]
tag_prefix = "python/"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
hypothesis = "^5.23.11"
pydoc-md = "^0.1.0"

[tool.pytest.ini_options]
addopts = "--doctest-glob='*pyi'"
